# sechound-open

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SANITIZATION.md  SECURITY.md  pyproject.toml  requirements.txt  sechound
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
agents/: README.md  binary-analyst.md  chain-builder.md  cloud-auditor.md  code-auditor.md  deps-auditor.md  recon.md  reporter.md  secrets-hunter.md  triage-agent.md  validator.md  web-hunter.md
config/: invariants.example.yaml  targets.example.yaml
docs/: ARCHITECTURE.md  EVIDENCE_HYGIENE.md  FP_CHECKLIST.md  INTEGRATIONS.md  METHODOLOGY.md  PROVIDERS.md  QUICKSTART.md  VULN_TAXONOMY.md
examples/: demo.sh  vulnerable_target.py
findings/: example-finding.json  schema.json
profiles/: README.md
prompts/: compounder.md  critic.md  executor.md  planner.md  ultrareview_counter.md  ultrareview_static.md  verifier.md
scripts/: check_sanitization.sh  install-hooks.sh
tasks/: example.yaml  juice-shop-swarm.yaml  juice-shop-sweep2.yaml  swarm.yaml
tests/: conftest.py  test_cross_backend.py  test_engagement_resolver.py  test_extract_and_diff.py  test_findings_db.py  test_import_triage.py  test_llm.py  test_skills_loader.py  test_verify.py
tools/: cli.py  compounder.py  critic.py  dast.py  doctor.py  findings_db.py  import_sarif.py  ingest.py  init_engagement.py  llm.py  orchestrate.py  report.py  run.py  sechound_lib.py  tenant_diff.py  triage.py  ultrareview.py  verify_finding.py
(+34 files in other folders)
