[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sechound"
version = "0.1.0"
description = "An LLM-orchestrated, model-agnostic security audit framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["security", "pentest", "appsec", "llm", "sast", "dast"]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
dev = ["pytest>=7.0", "PyYAML>=6.0"]

[project.scripts]
sechound = "tools.cli:main"

[project.urls]
Homepage = "https://github.com/lonerzee/sechound-open"

[tool.setuptools]
packages = ["tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
